<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ShapeAppearanceOverlay.Material3.Button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_begin="@dimen/constraintGuideLine"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_end="@dimen/constraintGuideLine"
        android:orientation="vertical" />

    <EditText
        android:id="@+id/CalculatorScreenText"
        android:text="@string/screenText"
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/screen_text_size"
        android:inputType="number"
        android:layout_marginTop="@dimen/screen_to_top"
        app:layout_constraintBottom_toBottomOf="@id/screenBarrier"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/screenBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="CalculatorScreenText" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1text"
        android:textStyle="bold"
        android:textSize="@dimen/button_text_size"
        android:layout_marginEnd="@dimen/button_to_next_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/screenBarrier" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/button_to_next_button"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/button5"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/screenBarrier" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/button_to_next_button"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintEnd_toStartOf="@id/buttonDivision"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/screenBarrier" />

    <Button
        android:id="@+id/buttonDivision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDivisionText"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/buttonMulti"
        app:layout_constraintEnd_toStartOf="@id/content_end"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/screenBarrier" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button4text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/button_to_next_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/button1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button5text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/button_to_next_button"
        app:layout_constraintBottom_toTopOf="@id/button8"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button6text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/button_to_next_button"
        app:layout_constraintBottom_toTopOf="@id/button9"
        app:layout_constraintEnd_toStartOf="@id/buttonMulti"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button3" />

    <Button
        android:id="@+id/buttonMulti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonMultiText"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/buttonPlus"
        app:layout_constraintEnd_toStartOf="@id/content_end"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/buttonDivision" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button7text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/button_to_next_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/button0"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button8text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/button_to_next_button"
        app:layout_constraintBottom_toTopOf="@id/buttonClear"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/button5" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button9text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/button_to_next_button"
        app:layout_constraintBottom_toTopOf="@id/buttonEquals"
        app:layout_constraintEnd_toStartOf="@id/buttonPlus"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/button6" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPlusText"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/buttonMinus"
        app:layout_constraintEnd_toStartOf="@id/content_end"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@id/buttonMulti" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button0text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/button_to_next_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonClear"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/button7" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonClearText"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/button_to_next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonEquals"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintTop_toBottomOf="@id/button8" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonEqualsText"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/button_to_next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonMinus"
        app:layout_constraintStart_toEndOf="@id/buttonClear"
        app:layout_constraintTop_toBottomOf="@id/button9" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonMinusText"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/content_end"
        app:layout_constraintStart_toEndOf="@id/buttonEquals"
        app:layout_constraintTop_toBottomOf="@id/buttonPlus" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/digitalButtonsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="button0, button2, button3, button4,
        button5, button6, button7, button8, button9, button0" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/actionsButtonsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="buttonDivision, buttonMulti,
        buttonPlus, buttonMinus" />

</androidx.constraintlayout.widget.ConstraintLayout>